--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ socket.on("chat", addChat);
     $(function() {
 
       var chatMessageTest = {
-          name:"Jerry Noel", chat: "Testing 123"
+          name:"David", chat: "Hello"
       }
 
 
