--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
      </div>
 
 
-<p style="margin-top:-100%;"  id="time"><em>  </em></p>
+<p style="visibility:hidden"  id="time"><em>  </em></p>
 
 
 
@@ -66,7 +66,7 @@ socket.on("chat", addChat);
 
 
       $('#form').ajaxForm(function(response) {
-        alert(response);
+        console.log(response);
       });
 
      //alert("hi");
