--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ socket.on('chat', function(data){
   //  $("#time").html('<em style="font-size:12px;">' + stamp + '</em> ');
   //  $("#txtMessage").val($("#txtMessage").val() + ' ' + $("#time").html());
       var imageUrlName = {
-          name: $("#txtName").val(), url: 'sa'
+          name: $("#txtName").val()
       }
   }
   postImage(imageUrlName);
