--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ socket.on("chat", addChat);
               name: $("#txtName").val()
           }
       }
-      postImage(imageUrlName[0]);
+      postImage(imageUrlName.name);
 
         });
       });
