--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ socket.on("chat", addChat);
       //  $("#time").html('<em style="font-size:12px;">' + stamp + '</em> ');
       //  $("#txtMessage").val($("#txtMessage").val() + ' ' + $("#time").html());
           var imageUrlName = {
-              name: 'Jerry Noel'
+              name: $("#txtName").val()
           }
       }
       postImage(imageUrlName);
