--- a/index.html
+++ b/index.html
@@ -71,11 +71,10 @@ socket.on("chat", addChat);
       if($("#txtName").val() != ""){
       //  $("#time").html('<em style="font-size:12px;">' + stamp + '</em> ');
       //  $("#txtMessage").val($("#txtMessage").val() + ' ' + $("#time").html());
-          var imageUrlName = {
-              name: $("#txtName").val()
-          }
+          var imageUrlName =  $("#txtName").val();
+          postImage(imageUrlName);
+
       }
-      postImage(imageUrlName);
 
         });
       });
