--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@ var socket = io();
 socket.on("chat", addChat);
     $(function() {
 
-
+      module.exports = {
+        firstName: 'Noel',
+        lastName: 'placeHolder'
+      };
+      
       $('#form').ajaxForm(function(response) {
         console.log(response);
       });
