--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <title>Philly Chat</title>
     <link rel="stylesheet" type="text/css" href="/public/style.css"/>
-    <script>
-    $=jQuery;
-    </script>    <script src="/script.js"></script>
+        <script src="/script.js"></script>
    <script src="/socket.io/socket.io.js"></script>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
