--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Philly Chat</title>
     <link rel="stylesheet" type="text/css" href="/public/style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./index.js"></script>
 
    <script src="/socket.io/socket.io.js"></script>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
