--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
 <script>
 var socket = io();
 
-socket.on("chat", addChat, getImages);
+socket.on("chat", addChat);
+socket.on("image", getImages);
+
     $(function() {
       $('#form').ajaxForm(function(response) {
         console.log(response);
@@ -74,6 +76,8 @@ socket.on("chat", addChat, getImages);
         var imageUrlName =  $("#txtName").val();
         postImage(imageUrlName);
         console.log(imageUrlName);
+        socket.emit("image", handle.value);
+
     }
 
       });
