--- a/index.html
+++ b/index.html
@@ -45,10 +45,14 @@
        <p id="typing" style="margin-left:5px;  position: absolute; margin-top:-20px; color:grey; "> </p>
 
        <form style="position:absolute" id="form" action="/cloud" method="post" enctype="multipart/form-data">
-         Upload a File:
+        <div>
+          <label id="submit" name="submit" for="myfile">
+              <img src="http://goo.gl/pB9rpQ"/>
+          </label>
+
          <input type="file" id="myfile" name="myfile">
-         <input type="submit" id="submit" name="submit" value="Upload File" >
-     </form>
+           </div>
+      </form>
      <p id="status"></p>
 
      </div>
@@ -65,7 +69,7 @@ socket.on("chat", addChat);
 
 
     $(function() {
-       
+
       $('#form').ajaxForm(function(response) {
         console.log(response);
       });
