--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
        <form style="position:absolute" id="form" action="/cloud" method="post" enctype="multipart/form-data">
         <div>
-          <label id="submit" name="submit" for="myfile"> Upload
+          <label id="submit" name="submit"  > Upload
               <img src="http://goo.gl/pB9rpQ"/>
           </label>
 
