--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
 
        <form style="position:absolute" id="form" action="/cloud" method="post" enctype="multipart/form-data">
         <div>
-          <label id="submit" name="submit"  > Upload
+          <label id="submit" name="submit" for="myfile"> Upload
               <img src="http://goo.gl/pB9rpQ"/>
           </label>
 
          <input type="file" id="myfile" name="myfile">
+         <button type="submit" id="submit"> </button>
            </div>
       </form>
      <p id="status"></p>
