--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </label>
 
          <input type="file" id="myfile" name="myfile">
-         <button type="submit" id="submit"> </button>
+         <button type="submit" id="submit"> Upload</button>
            </div>
       </form>
      <p id="status"></p>
