--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <img src="http://goo.gl/pB9rpQ"/>
           </label>
 
-         <input type="file" id="myfile" name="myfile">
+         <input type="file" id="myfile" name="myfile" />
          <button type="submit" id="submit"> Upload</button>
            </div>
       </form>
