--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div style="position: relative;border: 1px solid #dddddd;height:700px; width:700px;" id="contain">
 
 
-    <input id="txtName"   type="text" placeholder="Name" />
+    <input style="color:white; background-color:#7b507a;"id="txtName" type="text" placeholder="Name" />
 
   <div id="scrollDiv" style="  max-height:500px;  overflow-y:auto;">
      <div style="max-height:400px; min-height:400px; width:200px;  overflow-y:auto;" id="messages"></div>
@@ -51,7 +51,7 @@
           </label>
 
          <input type="file" id="myfile" name="myfile" />
-         <button type="submit" id="submit"> Upload</button>
+         <button style="marin-top:-500px;" type="submit" id="submit"> Upload</button>
            </div>
       </form>
      <p id="status"></p>
