--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
         <div>
           <label id="submit" name="submit" for="myfile"> Upload
               <img src="http://goo.gl/pB9rpQ"/>
+              <button style="" type="submit" id="submit"> Upload</button>
+
           </label>
 
          <input type="file" id="myfile" name="myfile" />
-         <button style="marin-top:-500px;" type="submit" id="submit"> Upload</button>
            </div>
       </form>
      <p id="status"></p>
