--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
        <p id="typing" style="margin-left:5px;  position: absolute; margin-top:-20px; color:grey; "> </p>
 
 <p id="status"></p>
-<div>
-       <form style="position:absolute" id="form" action="/cloud" method="post" enctype="multipart/form-data">
+<div style="position:absolute; margin-top:50px;">
+       <form style="position:absolute;" id="form" action="/cloud" method="post" enctype="multipart/form-data">
         <label id="jlabel" for="myfile"> Upload a file</label> <input type="file" id="myfile" name="myfile">
-         <input type="submit" id="submit" name="submit" value="Upload" >
+        <br /> <input type="submit" id="submit" name="submit" value="Upload" >
      </form>
      </div>
 <p id="status"></p>
