--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div style="height:35px; width:35px;border-radius:100%; margin-top: 8px;position: absolute; margin-left: 5px; background-color:white;"> </div>
 <span style="color:white;margin-top: 10px; margin-left: 60px;font-size:25px;position: absolute"> Please enter a name and message! </span>
 </div>
-  <div style="position: relative;border: 1px solid #dddddd;height:700px; width:700px;" id="contain">
+  <div style="position: relative;border: 1px solid #dddddd;height:710px; width:700px;" id="contain">
 
 
     <input id="txtName" style="color:white; background-color:#7b507a;"  type="text" placeholder="Name" />
@@ -45,10 +45,10 @@
        <p id="typing" style="margin-left:5px;  position: absolute; margin-top:-20px; color:grey; "> </p>
 
 <p id="status"></p>
-<div style="position:absolute; margin-top:50px;">
+<div style="position:absolute; margin-top:75px;width:200px;">
        <form style="position:absolute;" id="form" action="/cloud" method="post" enctype="multipart/form-data">
-        <label id="jlabel" for="myfile"> Upload a file</label> <input type="file" id="myfile" name="myfile">
-        <br /> <input type="submit" id="submit" name="submit" value="Upload" >
+        <label style="color:white" id="jlabel" for="myfile"> Upload a file</label> <input type="file" id="myfile" name="myfile">
+        <br /> <br /><input type="submit" id="submit" name="submit" value="Upload" >
      </form>
      </div>
 <p id="status"></p>
