--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p id="status"></p>
 <div style="position:absolute; margin-top:75px;width:200px;">
        <form style="position:absolute;" id="form" action="/cloud" method="post" enctype="multipart/form-data">
-        <label style="color:white" id="jlabel" for="myfile"> Upload a file</label> <input type="file" id="myfile" name="myfile">
+        <label style="color:#333" id="jlabel" for="myfile"> Upload a file</label> <input type="file" id="myfile" name="myfile">
         <br /> <br /><input type="submit" id="submit" name="submit" value="Upload" >
      </form>
      </div>
