--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js"></script>
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </head>
 <body>
   <!--
@@ -58,6 +59,7 @@
 
 <p style="visibility:hidden"  id="time"><em>  </em></p>
 
+<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="jerry-noel-959079120"><a class="LI-simple-link" href='https://www.linkedin.com/in/jerry-noel-959079120?trk=profile-badge'>Jerry Noel</a></div>
 
 
 <script>
