--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 <div style="height:35px; width:35px;border-radius:100%; margin-top: 8px;position: absolute; margin-left: 5px; background-color:white;"> </div>
 <span style="color:white;margin-top: 10px; margin-left: 60px;font-size:25px;position: absolute"> Please enter a name and message! </span>
 </div>
+<div style="width:100%; height:auto;">
+  <div style="float:right;" class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="jerry-noel-959079120"><a class="LI-simple-link" href='https://www.linkedin.com/in/jerry-noel-959079120?trk=profile-badge'>Jerry Noel</a></div>
+
+
   <div style="position: relative;border: 1px solid #dddddd;height:710px; width:700px;" id="contain">
 
 
@@ -54,11 +58,10 @@
 <p id="status"></p>
 
      </div>
-
+</div>
 
 <p style="visibility:hidden"  id="time"><em>  </em></p>
 
-<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="jerry-noel-959079120"><a class="LI-simple-link" href='https://www.linkedin.com/in/jerry-noel-959079120?trk=profile-badge'>Jerry Noel</a></div>
 <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
 
