--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ socket.on("chat", addChat);
 
      //alert("hi");
      var height = window.innerHeight;
-     $("#contain").css("margin-top", height * 0.5 );
-     $("#contain").css("transform", "translateY(-50%)" );
+  //   $("#contain").css("margin-top", height * 0.5 );
+  //   $("#contain").css("transform", "translateY(-50%)" );
      $("body").css("overflow", "hidden");
      var timeStamp = new Date();
      var month = timeStamp.getMonth() +1;
