--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <span style="color:white;margin-top: 10px; margin-left: 60px;font-size:25px;position: absolute"> Please enter a name and message! </span>
 </div>
 <div style="width:100%; height:auto;">
-  <div style="float:right; margin-left:-100px;" class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="jerry-noel-959079120"><a class="LI-simple-link" href='https://www.linkedin.com/in/jerry-noel-959079120?trk=profile-badge'>Jerry Noel</a></div>
+  <div style=" margin-left:-100%;" class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="jerry-noel-959079120"><a class="LI-simple-link" href='https://www.linkedin.com/in/jerry-noel-959079120?trk=profile-badge'>Jerry Noel</a></div>
 
 
   <div style="position: relative;border: 1px solid #dddddd;height:710px; width:700px;" id="contain">
