--- a/index.html
+++ b/index.html
@@ -21,16 +21,20 @@
   </video>
   </center>
 -->
-  <div id="backgroundImage">
 
-  </div>
 
 <div id="error" style="z-index: 999;visibility: hidden;box-shadow: 0px 2px 5px #333; width:420px;  height:50px; background-color:#2A0E39; position:absolute; margin-left: 70%;">
 <div style="height:35px; width:35px;border-radius:100%; margin-top: 8px;position: absolute; margin-left: 5px; background-color:white;"> </div>
 <span style="color:white;margin-top: 10px; margin-left: 60px;font-size:25px;position: absolute"> Please enter a name and message! </span>
 </div>
-<div style="width:100%; height:auto;">
-  <div style=" margin-left:-100%;" class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="jerry-noel-959079120"><a class="LI-simple-link" href='https://www.linkedin.com/in/jerry-noel-959079120?trk=profile-badge'>Jerry Noel</a></div>
+
+<div style=" width:25%;height:auto;" class="LI-profile-badge"
+ data-version="v1" data-size="medium" data-locale="en_US"
+  data-type="vertical" data-theme="dark" data-vanity="jerry-noel-959079120">
+  <a class="LI-simple-link" href='https://www.linkedin.com/in/jerry-noel-959079120?trk=profile-badge'>Jerry Noel</a>
+</div>
+
+<div style="width:100%; height:auto; transform:translateX(-50%);">
 
 
   <div style="position: relative;border: 1px solid #dddddd;height:710px; width:700px;" id="contain">
