--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 <span style="color:white;margin-top: 10px; margin-left: 60px;font-size:25px;position: absolute"> Please enter a name and message! </span>
 </div>
 
-<div style="box-shadow: 0px 1px 5px #dddddd; float:right; width:25%;height:auto;" class="LI-profile-badge"
+<div style="box-shadow: 0px 2px 5px #dddddd; float:right; width:auto;height:auto;" class="LI-profile-badge"
  data-version="v1" data-size="medium" data-locale="en_US"
   data-type="vertical" data-theme="dark" data-vanity="jerry-noel-959079120">
   <a class="LI-simple-link" href='https://www.linkedin.com/in/jerry-noel-959079120?trk=profile-badge'>Jerry Noel</a>
 </div>
 
-<div style="width:100%; height:auto; transform:translateY(-50%);">
+<div style="width:100%; height:auto;">
 
 
   <div style="position: relative;border: 1px solid #dddddd;height:710px; width:700px;" id="contain">
