--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div style="width:100%; height:auto;">
 
 
-  <div style="position: relative;border: 1px solid #dddddd;height:710px; width:700px;" id="contain">
+  <div style="position: absolute;border: 1px solid #dddddd;height:710px; width:700px; margin-left:50%;" id="contain">
 
 
     <input id="txtName" style="color:white; background-color:#7b507a;"  type="text" placeholder="Name" />
